[tool.poetry]                   # Tables: (also known as hash tables or dictionaries) are collections of key/value pairs. They appear in square brackets on a line by themselves. 
# Key/Value Pair
# The primary building block of a TOML document is the key/value pair.
#
# Keys are on the left of the equals sign and values are on the right. Whitespace is ignored around key names and values. The key, equals sign, and value must be on the same line (though some values can be broken over multiple lines).
name = "hypermodern-python"     # Basic strings: value of the key that are surrounded by quotation marks
version = "0.1.0"               # Bare keys: (name that is used to the left of the equal sign) may only contain ASCII letters, ASCII digits, underscores, and dashes  
authors = ["Mohamed Abdellah <mohamed.ia@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mohamed-a/hypermodern-python"
repository = "https://github.com/mohamed-a/hypermodern-python"
keywords = ["hypermodern"]      # Arrays: are square brackets with values inside. Whitespace is ignored. Elements are separated by commas.
[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
